Removed from a controller and method in the inventory item test service to use pageable